--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poller+One');
+@import url("https://fonts.googleapis.com/css?family=Iceberg");
 
 body {
 	margin: 0;
@@ -9,6 +9,8 @@ body {
 	background-color: #001b44;
 	color:  #f6fffe;
 	background-image: linear-gradient(19deg, #001b44 0%, #b721ff 100%);
+  font-family: "Iceberg", cursive;
+  font-size: 16px;
 }
 
 code {
