--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
 	background-image: linear-gradient(19deg, #001b44 0%, #b721ff 100%);
   font-family: "Iceberg", cursive;
   font-size: 16px;
+  color: #333333;
+  background-color: #f2f2f2;
 }
 
 code {
