--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,12 @@
-@import url("https://fonts.googleapis.com/css?family=Iceberg");
+@import url('https://fonts.googleapis.com/css?family=Iceberg');
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: "Iceberg", cursive;
+  font-family: 'Iceberg', cursive;
   font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   color: #333333;
   background-color: #f2f2f2;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
